--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "jest --verbose"
+    
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,11 @@
     "jest": "^26.0.1",
     "nock": "^13.0.6",
     "nock-puppeteer": "^1.0.2",
+    "nodemon": "^2.0.7",
     "puppeteer": "^4.0.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   }
 }
